--- a/MyResume.html
+++ b/MyResume.html
@@ -2,6 +2,14 @@
 <html lang="en">
 <head>
     <title>My Resume</title>
+    <style>
+        body {
+            color:blue;
+        }
+        h3{
+            color:red;
+        }
+    </style>
     <script lang="javascript">
 
     </script>
@@ -53,7 +61,7 @@
 </div>
 <h3>Education</h3>
 <p>
-    
+
 </p>
 
 <p>MAX Technical Training Java Certificate 2020</p>
