--- a/MyResume.html
+++ b/MyResume.html
@@ -4,10 +4,25 @@
     <title>My Resume</title>
     <style>
         body {
-            color:blue;
+            color:black;
+            font-family:Georgia, 'Times New Roman', Times, serif;
+            font-size: 16pt;
+            
         }
         h3{
-            color:red;
+            color: deepskyblue;
+        }
+        p{
+            color: black;
+        }
+        /* #contact {
+            border: 2px dotted black;
+        } */
+        .black{
+            color: black;
+        }
+        .bold{
+            font-weight: bold;
         }
     </style>
     <script lang="javascript">
@@ -16,7 +31,7 @@
 </head>
 <body>
    <h3>Contact Information</h3> 
-   <div>
+   <div id="contact">
    <span>Kali Correll |</span>
    <span> 3131 Plainfield Rd |</span>  
    <span>Cincinnati,</span>
@@ -40,7 +55,7 @@
 </table>
 <h3>Career Goals</h3>
 <p>My goals are to solve complex probelms using code.</p>
-<p>Develop new efficient strategies that make my company work smarter not harder.</p>
+<p>Develop new efficient strategies that help my company work smarter not harder.</p>
 <p>Teach new co-workers and interns that coding is just TOO EASY!</p>
 <h3>Work Experience</h3>
 <div>
@@ -64,6 +79,7 @@
 
 </p>
 
-<p>MAX Technical Training Java Certificate 2020</p>
+<span>MAX Technical Training</span> 
+<p>Java Certificate 2020</p>
 </body>
 </html>
